# esp32-box-lite

./: .clangd  .gitignore  CHAT_UI_DESIGN.md  CMakeLists.txt  IMPLEMENTATION_DETAILS.md  INTERFACE_DOC.md  README.md  TROUBLESHOOTING.md  partitions.csv  sdkconfig  sdkconfig.defaults  设备设计文档_ESP32.md
main/: CMakeLists.txt  app_mqtt_client.c  app_mqtt_client.h  audio_codec.c  audio_codec.h  audio_player.c  audio_player.h  audio_recorder.c  audio_recorder.h  audio_stream_protocol.h  codec_benchmark.c  codec_benchmark.h  config.h  http_uploader.c  http_uploader.h  idf_component.yml  lcd_display.c  lcd_display.h  main.c  opus_decoder.c  opus_decoder.h  opus_encoder.c  opus_encoder.h  wake_word_detector.c  wake_word_detector.h  websocket_uploader.c  websocket_uploader.h  wifi_manager.c  wifi_manager.h
